Fixed some minor errors in contact.html and portfolio.html that were found by the code validator.

--- a/contact.html
+++ b/contact.html
@@ -35,26 +35,20 @@
 
                     <form id="contact-form" class="color-font">
 
-                         <label for="name">Name (required):</label>
-                         <span id='name-err'></span>
+                         <label>Name (required):</label>
                          <br>
-                         <input type="text" id="name" name="name" class="form-field" placeholder="John Doe"
-                              aria-required="true" required>
+                         <input type="text" id="name" name="name" class="form-field" placeholder="John Doe" required>
                          <br>
 
-
-                         <label for="email">Email (required):</label>
-                         <span id='email-err'></span>
+                         <label>Email (required):</label>
                          <br>
                          <input type="email" id="email" name="email" class="form-field" placeholder="example@gmail.com"
-                              aria-required="true" required>
+                              required>
                          <br>
 
-                         <label for="messge">Message (required):</label>
-                         <span id='message-err'></span>
+                         <label>Message (required):</label>
                          <br>
-                         <textarea type="text" id="message" name="message" class="form-field" placeholder="Type message here."
-                              aria-required="true" required></textarea>
+                         <textarea id="message" name="message" class="form-field" placeholder="Type message here."></textarea>
                          <br>
 
                          <button id="submit-btn" type="button" class="color-theme-inverse">Submit</button>
@@ -66,11 +60,8 @@
      </div> <!-- end main-wrapper  -->
 
      <footer>
-          Copyright 2018&copy;
+          Copyright 2019&copy;
      </footer>
-
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     <script src="assets/javascript/app.js" type="text/javascript"></script>
 
 </body>
 
