--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                     <ul id="nav-menu">
                          <li><a href="index.html">About Me</a></li>
                          <li><a href="contact.html">Contact</a></li>
-                         <li class="color-blank-nav">Portfolio</a></li>
+                         <li> class="color-blank-nav">Portfolio</li>
                     </ul>
                </div>
           </nav>
@@ -59,6 +59,9 @@
                               <td>
                                    <a href="" target="_blank"><img class="demo-btn" src="assets/images/placeholder-5.jpg"
                                              alt="future demo button" title="future demo button"></a>
+                              </td>
+                              <td>
+                                   &nbsp;
                               </td>
                          </tr>
                     </table>
