Inserted some comments and cleaned up some unnecessary links in the head.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
      <title>Sherrie McNulty</title>
 
      <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
      <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -23,8 +22,8 @@
                          <li><a href="index.html">About Me</a></li>
                          <li class="color-blank-nav">Contact</li>
                          <li><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-               </div>
+                    </ul> <!-- nav-menu -->
+               </div> <!-- nav-wrapper -->
           </nav>
 
           <section id="content-wrapper" class="margin-std color-theme">
@@ -34,7 +33,6 @@
                     <hr>
 
                     <form id="contact-form" class="color-font">
-
                          <label>Name (required):</label>
                          <br>
                          <input type="text" id="name" name="name" class="form-field" placeholder="John Doe" required>
@@ -53,11 +51,11 @@
 
                          <button id="submit-btn" type="button" class="color-theme-inverse">Submit</button>
                          <span id="status-msg"></span>
+                    </form> <!-- contact-form -->
 
-                    </form>
-               </div> <!-- end content -->
-          </section> <!-- end content-wrapper -->
-     </div> <!-- end main-wrapper  -->
+               </div> <!-- content -->
+          </section> <!-- content-wrapper -->
+     </div> <!-- main-wrapper  -->
 
      <footer>
           Copyright 2019&copy;
