--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
      <title>Sherrie McNulty</title>
 
      <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
      <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -23,8 +22,8 @@
                          <li class="color-blank-nav">About Me</li>
                          <li><a href="contact.html">Contact</a></li>
                          <li><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-               </div>
+                    </ul> <!-- nav-menu -->
+               </div> <!-- nav-wrapper -->
           </nav>
 
           <section id="content-wrapper" class="margin-std color-theme">
@@ -60,12 +59,12 @@
                          Patterns, Imagine, Genesis, Windows, Linux, HP/UX, Solaris.
                     </p>
 
-               </div> <!--  content  -->
-          </section> <!-- content-wrapper  -->
-     </div> <!--  main-wrapper  -->
+               </div> <!-- content -->
+          </section> <!-- content-wrapper -->
+     </div> <!-- main-wrapper -->
 
      <footer>
-          Copyright 2018&copy;
+          Copyright 2019&copy;
      </footer>
 
 </body>
