--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
                <div id="nav-wrapper">
                     <div id="brand" class="color-theme-inverse serif">
                          <h1>Sherrie McNulty</h1>
-                    </div>
+                    </div> <!-- div brand -->
 
                     <ul id="nav-menu">
                          <li><a href="index.html">About Me</a></li>
                          <li><a href="contact.html">Contact</a></li>
                          <li> class="color-blank-nav">Portfolio</li>
-                    </ul>
-               </div>
+                    </ul> <!-- nav-menu -->
+               </div> <!-- nav-wrapper -->
           </nav>
 
           <section id="content-wrapper" class="margin-std color-theme">
@@ -44,6 +44,7 @@
                                              alt="future demo button" title="future demo button"></a>
                               </td>
                          </tr>
+
                          <tr>
                               <td>
                                    <a href="" target="_blank"><img class="demo-btn" src="assets/images/placeholder-3.jpg"
@@ -66,12 +67,12 @@
                          </tr>
                     </table>
 
-               </div> <!--  contentb -->
-          </section> <!--  content-wrapper  -->
-     </div> <!--  main-wrapper  -->
+               </div> <!-- contentb -->
+          </section> <!-- content-wrapper -->
+     </div> <!-- main-wrapper -->
 
      <footer>
-          Copyright 2018&copy;
+          Copyright 2019&copy;
      </footer>
 
 </body>
