Fixed a syntax error in the Portfolio page's navigation menu.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                     <ul id="nav-menu">
                          <li><a href="index.html">About Me</a></li>
                          <li><a href="contact.html">Contact</a></li>
-                         <li> class="color-blank-nav">Portfolio</li>
+                         <li class="color-blank-nav">Portfolio</li>
                     </ul> <!-- nav-menu -->
                </div> <!-- nav-wrapper -->
           </nav>
